                     Each class overrides decorated() to add its type covariantly, thus getList()/getSet() etc. methods are removed
 o [None           ] ArrayStack is now deprecated and will be removed in the next major release. It is replaced by the java.util.Deque
                     interface available from Java 6.


Fixed Bugs
----------

 o [COLLECTIONS-472] Improved performance of "AbstractMapBag#containsAll(Collection)" by returning immediately
                     after a difference has been found. Thanks to Adrian Nistor.
 o [COLLECTIONS-461] Added additional clarification to javadoc of interface "Put" wrt return type of
                     "put(Object, Object)" method. Thanks to Matt Benson, sebb. 
 o [COLLECTIONS-447] Tree traversal with a TreeListIterator will not be affected anymore by the removal of an element directly after
                     a call to previous(). Thanks to Jeffrey Barnes. 
 o [COLLECTIONS-445] Adapt and/or ignore several unit tests when run on a IBM J9 VM (specification version 1.6.0) due to a faulty
                     "java.util.TreeMap" implementation. 
 o [COLLECTIONS-444] SetUniqueList.set(int, E) now works correctly if the object to be inserted is already placed at the given position.
                     Thanks to Thomas Vahrst, John Vasileff. 
 o [COLLECTIONS-441] MultiKeyMap.clone() now correctly calls super.clone(). Thanks to Thomas Vahrst. 
 o [COLLECTIONS-433] Improve performance of "TreeList#addAll" and "TreeList(Collection)" by converting the input collection into an
                     AVL tree and efficiently merge it into the existing tree. Thanks to Jeffrey Barnes. 
 o [COLLECTIONS-427] Fixed performance issue in "SetUniqueList#retainAll" method for large collections. Thanks to Mert Guldur. 
 o [COLLECTIONS-426] Fixed performance issue in "ListOrderedSet#retainAll" method for large collections. Thanks to Adrian Nistor. 